--- a/templates/what.html
+++ b/templates/what.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>What is a .ics file?</title>
+    <title>What is a .aco file?</title>
     <meta name="description" content="Convert ics files to csv, pdf, html, xml and lots of other formats">
     <meta name="keywords" content="what is a .ics file, about ics file, ice viewer, view ics, convert ics, ics, convert icalendar, ics to pdf, ics to xslx, ics to html, ics to Excel">
 
@@ -16,17 +16,10 @@
             <a class="header-link" href="mailto:icsconverter@gmail.com">Support</a>
         </div>
         <div class="text-section">
-            <h3>What is a .ics file?</h3>
-            <p>ICS files are used to store calendar information.  Whenever you export a calendar from Google Calendar,
-                Outlook, Lotus Notes or any other calendar provider they usually save it as an <a
-                        href="http://en.wikipedia.org/wiki/ICalendar">iCalendar</a> (.ics) file.</p>
+            <h3>What is a .aco file?</h3>
+            <p>An .aco file is a Adobe Photoshop Color Swatch File.  These files are used to export color palettes for Adobe products.</p>
 
-            <p>These files are not very easy to read so use our service to get your calendar into a spreadsheet (.xlsx, .csv) or view it directly (.txt, .html, .pdf) to see what's going on.</p>
-
-            <h3>Planes, Trains and Meetings</h3>
-            <p>ICS files can also be used for flight itineraries, meeting invites, restaurant reservations and just
-                about anything else that can be booked online.  We can instantly convert all of them to an easily
-                readable format that suits you.</p>
+            <p>ACO is a proprietory format which only Adobe products use.  ACO Viewer is the quickest and easiest way to extract colors from an .aco file.</p>
         </div>
     </div>
 
@@ -36,7 +29,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-53976130-1', 'auto');
+      ga('create', 'UA-62320842-1', 'auto');
       ga('send', 'pageview');
 
     </script>
