Remove all traces for ics

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,9 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>ACO Viewer - Free online ACO palette file viewer</title>
-    <meta name="description" content="A simple web service to view and convert ICS files.  Convert to loads of formats including CSV, XLSX, PDF, HTML, JSON & XML.">
+    <meta name="description" content="A simple web service to view ACO files.  Instantly view all the colors in Adobe Photoshop Color Swatch files .">
     <meta name="keywords"
-          content="ics viewer, ics converter, ics to csv, convert ics, ics, view ics, open ics, ics viewer, convert icalendar, icalendar to csv, ics to pdf, ics to xslx, ics to xsl, ics to xml, ics to html, ics to Excel">
+          content="aco viewer, aco converter, aco palette viewer">
 
     <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
     <link rel="shortcut icon" href="/static/images/32x32.png">
@@ -19,7 +19,7 @@
         <div id="header-title" itemprop="name">
         ACO File Viewer
         </div>
-        <meta itemprop="url" content="https://icsconvert.appspot.com/">
+        <meta itemprop="url" content="https://aco-viewer.appspot.com/">
         <div id="header-sub-title">
             <div itemprop="description">
             Instantly view and extract Adobe palette files
