--- a/templates/stats.html
+++ b/templates/stats.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Statistics - ICS Converter</title>
+    <title>ACO Viewer - Statistics</title>
 
     <link type="text/css" rel="stylesheet" href="/static/css/stats.css" />
     <link rel="shortcut icon" href="/static/images/32x32.png">
