--- a/templates/what.html
+++ b/templates/what.html
@@ -3,8 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>What is a .aco file?</title>
-    <meta name="description" content="Convert ics files to csv, pdf, html, xml and lots of other formats">
-    <meta name="keywords" content="what is a .ics file, about ics file, ice viewer, view ics, convert ics, ics, convert icalendar, ics to pdf, ics to xslx, ics to html, ics to Excel">
+    <meta name="description" content="A simple web service to view ACO files.  Instantly view all the colors in Adobe Photoshop Color Swatch files .">
+    <meta name="keywords"
+          content="aco viewer, aco converter, aco palette viewer">
 
     <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
     <link rel="shortcut icon" href="/static/images/32x32.png">
