--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>ACO Viewer - Free online ACO palette file viewer</title>
+    <title>ACO Viewer - Free online ACO palette file reader and viewer.</title>
     <meta name="description" content="A simple web service to view ACO files.  Instantly view all the colors in Adobe Photoshop Color Swatch files .">
     <meta name="keywords"
           content="aco viewer, aco converter, aco palette viewer">
